video control corrected

--- a/Conditon/Doctor/gpDoctor.html
+++ b/Conditon/Doctor/gpDoctor.html
@@ -33,7 +33,7 @@
     <div class="row">
         <div class="col s12 m6 left">
             <div class="col s12 m6 left">
-                <video width="400px" height="300px" autoplay muted id="Patient-Video"></video>
+                <video width="400px" height="300px" autoplay muted id="patvideo"></video>
             </div>
         </div>
        
