--- a/Conditon/Doctor/Patient.html
+++ b/Conditon/Doctor/Patient.html
@@ -34,6 +34,9 @@
             <a id="gpCall" href="gpDoctor.html">Redial Doctor</a>
         </div>
     </div>
+    <div class="row">
+        <video width="300" height="300" autoplay muted id="myvideo"></video>
+    </div>
     <script type="text/javascript" src="js/patient.js"></script>
 </body>
 </html>
